--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -74,4 +74,9 @@ jobs:
          branch: deployment
          force: true
          
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4.3.3
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: ./docs/.vuepress/dist/ # The folder the action should deploy.
 
