--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,6 +36,10 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true' # 如果没有缓存的话
         run: npm install # 安装依赖
 
+      - name: Add missing Dependencies
+        run: |
+          npm install markdown-it
+          npm install markdown-it-katex
       - name: Build project
         run: npm run docs:build # 构建项目和生成代码覆盖率报告
         env:
