--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -31,7 +31,7 @@ jobs:
 #           path: node_modules # 缓存路径
 #           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('package.json') }} # 缓存标识
 
-
+      
       - name: Install Dependencies
         if: steps.cache.outputs.cache-hit != 'true' # 如果没有缓存的话
         run: npm install # 安装依赖
@@ -41,10 +41,12 @@ jobs:
           npm install markdown-it
           npm install markdown-it-katex
       - name: Build project
-        run: npm run docs:build # 构建项目和生成代码覆盖率报告
+        run: |
+          npm run docs:build 
         env:
           LEANCLOUD_APP_ID: ${{ secrets.LEANCLOUD_APP_ID }} # 评 论系统的ID
           LEANCLOUD_APP_KEY: ${{ secrets.LEANCLOUD_APP_KEY }} # 评论系统的KEY
+          NODE_TLS_REJECT_UNAUTHORIZED: 0
 
       # 如果FTP-Deploy-Action出现，Dirty repository: Having uncommitted changes. 问题时，使用以下注释步骤解决问题
 #       - name: reset git
