--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Add missing Dependencies
         run: |
-          npm install @renovamen/vuepress-plugin-mermaid@next
+          npm install --save-dev @renovamen/vuepress-plugin-mermaid@next
           npm install --save-dev vuepress-plugin-mermaidjs
           npm install markdown-it
           npm install markdown-it-katex
