--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vuepress-plugin-flowchart": "^1.4.3",
     "vuepress-plugin-meting": "^0.3.0",
     "vuepress-plugin-reading-progress": "^1.0.10",
-    "vuepress-theme-reco": "^1.6.6"
+    "vuepress-theme-reco": "^1.6.6",
+	"vuepress-plugin-mermaidjs": "^2.0.0-beta.2"
   }
 }
