--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -31,11 +31,6 @@ jobs:
 #           path: node_modules # 缓存路径
 #           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('package.json') }} # 缓存标识
 
-      
-      - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true' # 如果没有缓存的话
-        run: npm install # 安装依赖
-
       - name: Add missing Dependencies
         run: |
           npm install mermaid
@@ -45,6 +40,15 @@ jobs:
           npm install markdown-it
           npm install markdown-it-katex
           npm install @vuepress/plugin-register-components
+          yarn add -D vuepress-plugin-mermaidjs@^1.9.0
+          
+      - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true' # 如果没有缓存的话
+        run: npm install # 安装依赖
+
+
+
+
       - name: Build project
         run: |
           npm run docs:build 
