--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -48,6 +48,15 @@ jobs:
 
 
 
+      - run: |
+          pip install markupsafe==2.0.1
+          pip install pyngrok
+          pip install jupyter
+          pip install --upgrade Pygments
+      - run: |
+          sh run.sh remote.ipynb remote.py
+
+        # 这里开始报错
 
       - name: Build project
         run: |
