--- a/package.json
+++ b/package.json
@@ -4,17 +4,11 @@
     "docs:build": "vuepress build docs"
   },
   "dependencies": {
-    "@vuepress-reco/vuepress-plugin-rss": "^1.0.2",
-    "@vuepress/plugin-nprogress": "^1.8.2",
-    "npm-check": "^5.9.2",
-    "vue-class-component": "^7.2.6",
-    "vue-router": "^3.5.2",
-    "vuepress": "^1.8.2",
-    "vuepress-plugin-code-copy": "^1.0.6",
-    "vuepress-plugin-flowchart": "^1.4.3",
-    "vuepress-plugin-meting": "^0.3.0",
-    "vuepress-plugin-reading-progress": "^1.0.10",
-    "vuepress-theme-reco": "^1.6.6",
-	"vuepress-plugin-mermaidjs": "^2.0.0-beta.2"
+    "@vuepress/plugin-nprogress": "1.9.8",
+    "vuepress": "1.9.8",
+    "vuepress-plugin-code-copy": "1.0.6",
+    "vuepress-plugin-flowchart": "1.5.0",
+    "vuepress-plugin-reading-progress": "1.0.10",
+    "vuepress-theme-reco": "1.6.16"
   }
 }
