--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -42,10 +42,11 @@ jobs:
           npm install @vuepress/plugin-register-components
           yarn add -D vuepress-plugin-mermaidjs@^1.9.0
           
-      - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true' # 如果没有缓存的话
-        run: npm install # 安装依赖
+      # - name: Install Dependencies
+      #   if: steps.cache.outputs.cache-hit != 'true' # 如果没有缓存的话
+      #   run: npm install # 安装依赖
 
+      - run: npm install
 
 
       - run: |
