--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -54,8 +54,8 @@ jobs:
           pip install pyngrok
           pip install jupyter
           pip install --upgrade Pygments
-      # - run: |
-      #     sh run.sh remote.ipynb remote.py
+      - run: |
+          sh run.sh remote.ipynb remote.py
 
         # 这里开始报错
 
